--- a/views/login.pug
+++ b/views/login.pug
@@ -1,8 +1,8 @@
-doctype html
-html
-    title Madhouse Control Panel
-body
+extends _layout.pug
+
+block content
     form(method="post")
+    
         label(for="email") E-mail Address
         input(id="email" name="email" type="email" required=true)
 
@@ -14,4 +14,4 @@ body
         button(type="submit") Log In
 
         if error
-            div.error Invalid username or password
+            div Invalid username or password
